--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -363,9 +363,10 @@ html:not(.designer) tr.selected [src*="https://ck2-app-tst-1.obc.local//Runtime/
 }
 html:not(.designer) .theme-entry.sidebarAvailable {
     left: 15rem;
-    width: calc(100% - 15rem);
+    max-width: calc(100% - 0rem);
     padding: 0 1rem;
     position: relative;
+    width: calc(100% - 15rem);
 }
 html:not(.designer) .runtime-content{
     margin:0!important;
@@ -1248,10 +1249,11 @@ html:not(.designer) .sidebarAvailable [name*="OBB_header"]{
 .popupManager[style*="position: absolute;"]{
 	height: 100vh!important;
 	width: 100vw!important;
-	/* position: fixed!important; */
+	position: fixed!important;
 	/* top: 0!important;
 	left: 0!important; */
 	z-index: 2;
+	left: 0!important;
 }
 .popup.dialog{
 	top: 50%!important;
