--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -1024,7 +1024,7 @@ html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Waiting RM A
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Waiting Return"],
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Waiting Document Signature"],
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Closed"],
-html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Pending recipient action"],
+html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Pending with Higher Management Team"]/* related to etender, do not replace or remove*/,
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Approval Awaiting from NOC Engineer"],
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Approval Awaiting from NOC Lead "],
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Pending draft letter"],
@@ -1051,7 +1051,7 @@ html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Waiting RM A
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Waiting Return"] >span.runtime-list-item,
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Waiting Document Signature"] > span,
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Closed"] >span,
-html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Pending recipient action"] >span,
+html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Pending with Higher Management Team"] >span,
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Pending draft letter"] >span,
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Pending reviewer"] >span,
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Pending for E-Sign"] >span,
@@ -1071,7 +1071,7 @@ html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Closed"] >sp
 	background-color:#EFEFEF;
 	color:#616161!important;
 }
-html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Pending recipient action"] >span,
+html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Pending with Higher Management Team"] >span,
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Pending draft letter"] >span,
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Pending reviewer"] >span,
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Pending for E-Sign"] >span,
