--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -1384,6 +1384,19 @@ html:not(.designer) .theme-entry #UsersConfig_secondPageOutside a.dropbutton.col
 	transform:scaleY(-1);
 }
 @media(min-width:1600px){
+	html:not(.designer) .theme-entry span[name*="profilePhoto"]{
+	border-radius:2vw;
+	padding: 0.4vw 1.6vw;
+	height: 2vw!important;
+}
+	html:not(.designer) [name="Account Picture"] {
+    margin-right: .5vw;
+		height:2vw!important;
+		width:2vw!important;
+}
+	html:not(.designer) [name="DLName"] {
+    font-size: 1vw !important;
+}
 		html:not(.designer) body.theme-entry [name*="kpiContainer"] span[name*="dlblAnswer"]{
 	font-size:1.3vw!important
 }
