--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -21,7 +21,7 @@ html:not(.designer) .SourceCode-Forms-Controls-Web-Button:hover{
 	background-color:var(--orange-hover)!important;
 }
 html:not(.designer) .tab-box-tabs{
-	padding: 1rem;
+	padding:0 1rem;
 	background-color:white;
 	margin-bottom: 0rem;
 	border-bottom:1px solid var(--borderColor)!important;
