--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -251,7 +251,7 @@ html:not(.designer) [name*="OBB_header"]{
 	z-index: 2;
 	height: 6rem;
 	padding: 0 1rem!important;
-	/* display: flex!important; */
+	display: flex!important;
 	align-items: center!important;
 	justify-content: space-between;
 	padding-top:1rem!important;
@@ -902,6 +902,9 @@ html:not(.designer) .theme-entry .message-box-content.error:before{
     background-position:center;
 }
 /* POPUP BRANDING END */
+html:not(.designer) [name*="headerLeftSection"]{
+	width: 80%;
+}
 html:not(.designer) .theme-entry span[name*="profilePhoto"]{
 	border:1px solid rgb(220 220 220 / 80%)!important;
 	border-radius:2rem;
@@ -912,7 +915,7 @@ html:not(.designer) .theme-entry span[name*="profilePhoto"]{
 	height: 3rem!important;
 	min-height:unset!important;
 	line-height:unset!important;
-	margin-left: 4rem!important;
+	/* margin-left: 4rem!important; */
 }
 /* */
 html:not(.designer) .worklist-grid-column-header-cell-text,
