--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -1395,6 +1395,9 @@ span#\35 799b0a5-a531-2dea-2f02-2841b85720da {
 span#c7e95771-5b68-40f6-48ee-018fac123216 {
     padding-right: 0;
 }
+div#\36 ab672ee-a1c8-1978-f363-82431b1d04ef_56ed7e67-ddc3-9111-724e-a3feeea8c26f_Table {
+    padding: 1rem;
+}
 @media(min-width:992px){
 	body.theme-entry.topbarExists {
     margin-top: 13rem;
