--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -9,6 +9,22 @@
     --regularFont:"Co Headline";
     --transition:all .3s ease-in-out;
 }
+/* PICKERS ICONS START */
+html:not(.designer) .theme-entry .input-control.select-box .input-control-buttons a.date>span span, 
+html:not(.designer) .theme-entry .input-control.select-box .input-control-buttons a.date:active>span span, 
+html:not(.designer) .theme-entry .input-control.select-box.active .input-control-buttons a.date>span span, 
+html:not(.designer) .theme-entry .input-control.select-box.read-only .input-control-buttons a.date:hover>span span, 
+html:not(.designer) .theme-entry .input-control.select-box.read-only .input-control-buttons a.date:focus>span span, 
+html:not(.designer) .theme-entry .input-control.select-box.disabled .input-control-buttons a.date:hover>span span, 
+html:not(.designer) .theme-entry .input-control.select-box.disabled .input-control-buttons a.date:focus>span span{
+	background-image:url("https://frontenduiux.github.io/OBB_ETenders/Images/date.png")!important;
+	background-repeat:no-repeat;
+	background-position: center!important;
+	background-size: 1.1rem!important;
+	height:2rem;
+	width:2rem;
+}
+/* PICKERS ICONS END */
 html:not(.designer) .theme-entry .message-box-content.confirmation:before,
 html:not(.designer) .theme-entry .message-box-content.info:before{
 	background-image: url("https://frontenduiux.github.io/OBB_Services/Images/general.png");
