--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -9,6 +9,7 @@
     --regularFont:"Co Headline";
     --transition:all .3s ease-in-out;
 }
+/*test*/
 /* PICKERS ICONS START */
 html:not(.designer) .theme-entry .input-control.select-box .input-control-buttons a.date>span span, 
 html:not(.designer) .theme-entry .input-control.select-box .input-control-buttons a.date:active>span span, 
