--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -1043,7 +1043,7 @@ html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title*="Approved"],
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="FTTX Desgin Team Approved"],
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Completed"],
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Waiting RM Approval"],
-html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Waiting Return"],
+html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Returned to Vendor"],
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Waiting Document Signature"],
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Closed"],
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Pending with Higher Management Team"]/* related to etender, do not replace or remove*/,
@@ -1070,7 +1070,7 @@ html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title*="Approved"] 
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="FTTX Desgin Team Approved"] >span.runtime-list-item,
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Completed"] >span.runtime-list-item,
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Waiting RM Approval"] >span.runtime-list-item,
-html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Waiting Return"] >span.runtime-list-item,
+html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Returned to Vendor"] >span,
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Waiting Document Signature"] > span,
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Closed"] >span,
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Pending with Higher Management Team"] >span,
@@ -1130,8 +1130,8 @@ html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Waiting Docu
 	background-color:#FFF5E5!important;
 	padding: 0.6rem 1.2rem!important;
 }
-html:not(.designer) .theme-entry .grid-content-cell-wrapper[title="Waiting Return"] >span,
-html:not(.designer)  [name*="OBB_statusContainer"] span[title="Waiting Return"],
+html:not(.designer) .theme-entry .grid-content-cell-wrapper[title="Returned to Vendor"] >span,
+html:not(.designer)  [name*="OBB_statusContainer"] span[title="Returned to Vendor"],
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Preparing document"] span{
 	color:#D19D00!important;
 	background-color:#FAF5E5!important;
