--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -240,6 +240,9 @@ html:not(.designer) [name="Worklist"]{
 [name*="d-block"]{
 	display:block!important;
 }
+[name*="flex-wrap"]{
+	flex-wrap:wrap!important;
+}
 html:not(.Designer) .active[name="btnOutgoing"]:focus .button-text,
 html:not(.Designer) .active[name="btnIncoming"]:focus .button-text{
 	color:var(--aqua)!important;
