--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -1462,6 +1462,12 @@ div#\36 ab672ee-a1c8-1978-f363-82431b1d04ef_56ed7e67-ddc3-9111-724e-a3feeea8c26f
 }
 }
 @media(min-width:1600px){
+	html:not(.designer) .popup.dialog{
+		min-height: 14vw;
+	}
+	html:not(.designer) .popup.dialog .scroll-wrapper.message-box-content.info{
+		min-height: 5vw!important;
+	}
 	html:not(.designer) body.theme-entry [name*="kpiContainer"] span{
 		font-size:1vw!important;
 	}
