--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -1317,11 +1317,11 @@ html:not(.designer) .sidebarAvailable [name*="OBB_header"]{
     width: calc(100vw - 15rem);
 }
 .popupManager[style*="position: absolute;"]{
-	height: 100vh!important;
+	/* height: 100vh!important;
 	width: 100vw!important;
 	position: fixed!important;
 	z-index: 2;
-	left: 0!important;
+	left: 0!important; */
 }
 .popup.dialog{
 	top: 50%!important;
