--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -1462,6 +1462,10 @@ div#\36 ab672ee-a1c8-1978-f363-82431b1d04ef_56ed7e67-ddc3-9111-724e-a3feeea8c26f
 }
 }
 @media(min-width:1600px){
+		.theme-entry .popup.id-calendar-control-popup {
+    width: 18vw !important;
+    height: auto !important;
+}
 		html:not(.designer) .theme-entry .input-control.select-box .input-control-buttons a.date>span span, 
 html:not(.designer) .theme-entry .input-control.select-box .input-control-buttons a.date:active>span span, 
 html:not(.designer) .theme-entry .input-control.select-box.active .input-control-buttons a.date>span span, 
