--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -575,8 +575,11 @@ html:not(.designer) .select-box[name*="OBB_calendar"] *,
 	margin-bottom:1rem;
 }
 .theme-entry .popup.id-calendar-control-popup {
-    width: 18rem !important;
+    width: 18rem!important;
     height: auto!important;
+    top: 0!important;
+    right: 0!important;
+    position: absolute;
 }
 .theme-entry .top-calendar a.today-title {
     border: none;
@@ -1317,11 +1320,11 @@ html:not(.designer) .sidebarAvailable [name*="OBB_header"]{
     width: calc(100vw - 15rem);
 }
 .popupManager[style*="position: absolute;"]{
-	/* height: 100vh!important;
+	height: 100vh!important;
 	width: 100vw!important;
 	position: fixed!important;
 	z-index: 2;
-	left: 0!important; */
+	left: 0!important;
 }
 .popup.dialog{
 	top: 50%!important;
