--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -27,7 +27,8 @@ html:not(.designer) .theme-entry .input-control.select-box.disabled .input-contr
 }
 /* PICKERS ICONS END */
 html:not(.designer) .theme-entry .message-box-content.confirmation:before,
-html:not(.designer) .theme-entry .message-box-content.info:before{
+html:not(.designer) .theme-entry .message-box-content.info:before,
+.theme-entry .message-box-content.message:before{
 	background-image: url("https://frontenduiux.github.io/OBB_Services/Images/general.png");
 	background-size: contain;
 	background-repeat: no-repeat;
