--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -12,6 +12,9 @@
 body.theme-entry.runtime-view{
 	background-color:transparent!important
 }
+iframe.runtime-popup[name="47a2f163-e949-46b2-988d-402f21a79719_1_1755593854531"] {
+    min-height: 16rem;
+}
 /*test*/
 /* PICKERS ICONS START */
 html:not(.designer) .theme-entry .input-control.select-box .input-control-buttons a.date>span span, 
