--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -15,6 +15,12 @@ body.theme-entry.runtime-view{
 iframe.runtime-popup[name="47a2f163-e949-46b2-988d-402f21a79719_1_1755593854531"] {
     min-height: 16rem;
 }
+[name*="customTile"] {
+    background-color: #f6f6f6;
+    border-radius: 1rem;
+    padding: 1rem;
+    height: 10rem;
+}
 /*test*/
 /* PICKERS ICONS START */
 html:not(.designer) .theme-entry .input-control.select-box .input-control-buttons a.date>span span, 
