--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -12,6 +12,17 @@
 div#\38 f084940-fb4b-aef6-1282-d2e1f98b17cd_bffbdab8-8b3b-15aa-f0bf-d600acb5d34f_Table {
     padding: 1rem 2rem;
 }
+span#\38 f084940-fb4b-aef6-1282-d2e1f98b17cd_d1d5e59f-16bc-978f-e801-515644314b2d,
+span#\38 f084940-fb4b-aef6-1282-d2e1f98b17cd_9c643a95-2f95-4146-d605-c8309829e7b3,
+span#\38 f084940-fb4b-aef6-1282-d2e1f98b17cd_a7128535-15a6-7f7b-4550-1229a58b1a24,
+span#\38 f084940-fb4b-aef6-1282-d2e1f98b17cd_2f10dd60-5c96-3850-180c-5d983259cbfd,
+span#\38 f084940-fb4b-aef6-1282-d2e1f98b17cd_bcb512ca-5123-32a0-d2d3-6566c945015c,
+span#\38 f084940-fb4b-aef6-1282-d2e1f98b17cd_694199bc-6dce-0120-45c6-e56367c43df9,
+span#\38 f084940-fb4b-aef6-1282-d2e1f98b17cd_1f4a64f9-185e-b10d-e42b-005f4846e08e,
+span#\38 f084940-fb4b-aef6-1282-d2e1f98b17cd_b95a7498-ab62-971e-f374-b380b4b7e79e,
+span#\38 f084940-fb4b-aef6-1282-d2e1f98b17cd_f10fbc03-cc7c-91e8-24cb-380efbc6b88a{
+    background-color: #f7f7f7!important;
+}
 a.calender-control-button:hover,
 a.dropdown.border-left-only:hover{
 	background-color:transparent!important;
