--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -2003,6 +2003,7 @@ html:not(.designer) [name*="OBB_label"]{
 	html:not(.designer) .sidebarAvailable [name*="OBB_header"]{
     left: 16vw;
     width: calc(100vw - 16vw);
+    height: 6vw;
 }
 	html:not(.designer) body.topbarExists{
 	margin-top:13.3vw;
